--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,8 +7,14 @@ buildscript {
 
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        id("com.google.gms.google-services") version "4.4.1" apply false
     }
 }
+plugins {
+    // Other plugins...
+    id "com.google.gms.google-services" version "4.4.1"
+}
+
 
 allprojects {
     repositories {
